# tap-meteotrentino

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  run-zizmor.yml  test.yml
tap_meteotrentino/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
